# chinese-chess

./: CMakeLists.txt  README.md
.github/workflows/: run_test.yaml
exec/: CMakeLists.txt  run.cpp
include/: board.hpp  chess.hpp  game.hpp  initializer.hpp  rule.hpp
lib/: CMakeLists.txt  board.cpp  chess.cpp  initializer.cpp  rule.cpp
test/: CMakeLists.txt  rule_test.cpp  small_rule_test.cpp
